--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<img src="img/gettyimages2.jpg" alt="">
 			</div>
 			<div class="inline-block">
-				< class="one">Высота гор измеряется от уровня моря при помощи цепи измерительных точек, находящихся в прямой видимости друг от друга, и сложных тригонометрических расчетов. Непальцы считали от Бенгальского залива, китайцы от Желтого моря.</>
+				<p class="one">Высота гор измеряется от уровня моря при помощи цепи измерительных точек, находящихся в прямой видимости друг от друга, и сложных тригонометрических расчетов. Непальцы считали от Бенгальского залива, китайцы от Желтого моря.</p>
 				<p class="two">Непальские геодезисты поднимались на вершину в прошлом году, китайские - в мае нынешнего года, став единственными людьми, побывавшими на вершине Эвереста после начала пандемии коронавируса.</p>
 				<p class="three">"После того как маяк был установлен на вершине, исследователи замеряли образовавшиеся треугольники не менее чем на шести точках, расположенных ниже, с помощью тригонометрических формул", - объяснил китайской газете "Чайна дейли" сотрудник Академии геодезии и картографии КНР Цзян Тао.</p>
 				<p class="four">По его словам, для большей точности использовались и данные систем спутниковой навигации, в частности, китайские специалисты полагались на собственную систему "Бэйдоу", созданную КНР в качестве альтернативы американской GPS.</p>
